re-implementing tests on macOS

--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -16,8 +16,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: ['ubuntu-latest']
-        # os: ['ubuntu-latest', 'macos-latest'] # problems with XCode
+        # os: ['ubuntu-latest']
+        os: ['ubuntu-latest', 'macos-latest']
     defaults:
       run:
         shell: bash
