--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -16,7 +16,6 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        # os: ['ubuntu-latest']
         os: ['ubuntu-latest', 'macos-latest']
     defaults:
       run:
@@ -26,20 +25,16 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           distribution: 'adopt-hotspot'
-          java-version: '16'
+          java-version: '17'
           cache: 'gradle'      
-      - uses: actions/setup-python@v4
-        with:
-          python-version: 3.8
       - uses: r-lib/actions/setup-r@v2
-      - uses: conda-incubator/setup-miniconda@v2
+      - uses: mamba-org/provision-with-micromamba@main
         with:
-          auto-update-conda: true
-          python-version: 3.8
-          mamba-version: "*"
-          activate-environment: base
+          cache-downloads: true
+          cache-env: true
           environment-file: environment.yml
-      - uses: s-weigand/setup-conda@v1
+          extra-specs: |
+            python=3.8
       - name: Create and populate .Renviron file
         env:
           CROSSREF_EMAIL: ${{ secrets.CROSSREF_EMAIL }}
