--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -16,7 +16,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: ['ubuntu-latest', 'macos-latest']
+        os: [
+          'ubuntu-latest', 
+          'macos-latest',
+          'windows-latest'
+        ]
     defaults:
       run:
         shell: bash
