--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -18,19 +18,19 @@ jobs:
       matrix:
         os: [
           'ubuntu-latest', 
-          'macos-latest',
-          'windows-latest'
+          'macos-latest'
+          # 'windows-latest'
         ]
     defaults:
       run:
         shell: bash
     steps:
       - uses: actions/checkout@v3
-      # - uses: actions/setup-java@v3
-      #   with:
-      #     distribution: 'adopt-hotspot'
-      #     java-version: '17'
-      #     cache: 'gradle'      
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'adopt-hotspot'
+          java-version: '17'
+          cache: 'gradle'      
       - uses: r-lib/actions/setup-r@v2
       - uses: mamba-org/provision-with-micromamba@main
         with:
