--- a/.github/workflows/link_check.yaml
+++ b/.github/workflows/link_check.yaml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Run linkspector
-      - uses: umbrelladocs/action-linkspector@v1
+        uses: umbrelladocs/action-linkspector@v1
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
