--- a/.github/workflows/ci-processing.yml
+++ b/.github/workflows/ci-processing.yml
@@ -32,13 +32,13 @@ jobs:
           java-version: '17'
           cache: 'gradle'      
       - uses: r-lib/actions/setup-r@v2
-      - uses: mamba-org/provision-with-micromamba@main
+      - uses: mamba-org/setup-micromamba@v1
         with:
           cache-downloads: true
           cache-env: true
           environment-file: environment.yml
-          extra-specs: |
-            python=3.11
+          create-args: >-
+            python=3.10
       - name: Create and populate .Renviron file
         env:
           CROSSREF_EMAIL: ${{ secrets.CROSSREF_EMAIL }}
